k8s/01-namespace-config-kind.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kayak-travel
